# test122

./: .eslintrc.json  .gitignore  .replit  .tsbuildinfo  COMPILE_EXE_README.md  COMPLETION_REPORT.md  CONNECTION_FIX.md  CPP_DESKTOP_SUMMARY.md  CPP_IMPLEMENTATION_COMPLETE.md  EXE_OUTPUT.md  LICENSE  PROJECT_STATUS.md  PROJECT_STATUS_FINAL.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  SETUP_SUMMARY.md  TYPESCRIPT_README.md  WEB_APP.md  WEB_APP_GUIDE.md  WEB_APP_QUICKSTART.js  WEB_APP_SUMMARY.md  api-server-launcher.js  build.bat  build.ps1  classic-ide-launcher.js  cli.ts  compile-cli.js  compile.bat  compile.exe.bat  compile.exe.ps1  compile.js  compile.ps1  example.ts  game-compiler.cpp  ide-launcher.js  index.ts  package-lock.json  package.json  readmen.md  (+11 more)
.local/: session_plan.md
.local/state/replit/: log-query.db  log-query.db-shm  log-query.db-wal
documents/: API_INTEGRATION_GUIDE.md  BLACK_SCREEN_FIX.md  BLACK_SCREEN_FIXED.md  BUILD_OUTPUT.md  COMPILE_GUIDE.md  FEATURE_TESTING_GUIDE.md  GB_STUDIO_FEATURES.md  GB_STUDIO_IMPLEMENTATION.md  GITHUB_PUSH_STATUS.md  IMPLEMENTATION_SUMMARY.md  NEW_FEATURES_GUIDE.md  NEW_SCREENS_GUIDE.md  OUTPUT_GUIDE.md  OUTPUT_SETUP_COMPLETE.md  README.md  README_ENHANCED.md  ROM_ORGANIZATION.md  UI_LOCATION_GUIDE.md  WEB_COMPILATION_COMPLETE.md  code-editor-blueprint-guide.md  complete-features.md
output/: BUILD.bat  README.md  run-web-app.bat
output/docs/: DRAGON_STUDIO_README.md  README.md
roms/LabyrinthOfTheDragon/: FILE_LIST.txt  README.md  build.bat  build.ps1
roms/LabyrinthOfTheDragon/assets/: tables.csv
roms/LabyrinthOfTheDragon/data/: strings_ability.bank00.c  strings_battle.bank03.c  strings_chest_item.bank02.c  strings_credits.bank01.c  strings_floor1.bank02.c  strings_floor2.bank02.c  strings_floor3.bank02.c  strings_floor4.bank02.c  strings_floor5.bank02.c  strings_floor6.bank02.c  strings_floor7.bank02.c  strings_floor8.bank02.c  strings_floor_common.bank02.c  strings_gain_ability.bank02.c  strings_items.bank03.c  strings_maps.bank02.c  strings_misc.bank00.c  strings_monster.bank06.c  strings_monster2.bank07.c  strings_player.bank04.c
roms/LabyrinthOfTheDragon/res/tiles/: manifest.json
src/: ai-behavior-tree.js  analytics-system.js  audio-system.js  cloud-save-system.js  leaderboard-system.js  localization-system.js  networking-system.js  particle-system.js  physics-engine.js  plugin-system.js  save-game-manager.js  scene-editor.js  shader-system.js  sprite-sheet-editor.js  tilemap-editor.js  ui-toolkit.js
src-cpp/: BUILD_GUIDE.md  BUILD_STATUS.md  CMakeLists.txt  QUICK_REFERENCE.md  README.md  build.bat  install-mingw64.ps1  main.cpp  server.hpp  setup-deps.bat  webview.hpp
src-ts/: ability.ts  battle.ts  core.ts  dialogue.ts  game-engine.ts  index.ts  inventory.ts  item.ts  loot.ts  map.ts  monster.ts  party.ts  player.ts  quest.ts  save.ts  shop.ts  status-effects.ts  textbox.ts  utils.ts
src/client/: debug-screens.html  index.html  studio.html
src/client/css/: editors.css  gb-studio.css  main.css  menus.css  project-manager.css  splash.css  title-screen.css  widgets.css
src/client/emulator/: GameBoyIO.js  XAudioServer.js  glue.js
src/client/js/: animation-system.js  app.js  blueprint-editor.js  character-system.js  code-editor.js  context-menus.js  core-systems.js  dialogue-system.js  dnd5e-pixelart.js  dnd5e.js  drag-drop.js  editor-ide.js  export-builder.js  game-engine.js  gb-studio-core.js  gb-studio-events.js  gb-studio-init.js  gb-studio-music.js  gb-studio-scene-editor.js  input-manager.js  menu-handlers.js  menus.js  platformconfig.js  project-manager.js  project-system.js  screen-manager.js  sorctools.js  tools.js  widgets.js
tools-ts/: build.ts  index.ts  map-converter.ts  png-to-tiles.ts  string-generator.ts
types/: gbc.d.ts  global.d.ts  index.d.ts
